# voice-intelligence-app

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  lib.rs  logic.rs  main.rs  models.rs  ollama.rs  pipeline.rs  store.rs
src/app/: globals.css  page.tsx
src/components/: Dashboard.tsx  History.tsx  Settings.tsx  State.tsx
src/components/ui/: badge.tsx  sonner.tsx
src/lib/: store.ts
