[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
dirs = "6.0.0"
cpal = "0.15.2"
hound = "3.5.1"
rodio = "0.17.1"
tauri-plugin-global-shortcut = "2.3.1"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
base64 = "0.22.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3.4"
whisper-rs = "0.15.1"

[profile.release]
# Make release mode identical to debug mode
opt-level = 0
lto = false
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

